fix: little button alignment and wrapper theme color issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 }
 
 .EditorHolder {
-	height: 87%;
+	height: 92%;
 	width: 100%;
 }
 
@@ -21,13 +21,17 @@
 
 .SettingHolder {
 	width: 100%;
-	height: 13%;
-	min-height: 70px;
+	height: 8%;
+	min-height: 100px;
+	position: relative;
 }
 
 .Setting {
 	position: relative;
 	padding: 10px 25px;
+	display: flex;
+	align-items: center;
+	gap: 10px;
 }
 
 .SelectLangHolder {
@@ -68,9 +72,9 @@
 }
 
 .ThemeBTN {
-	padding: 14.3px 15px;
+	padding: 13px 15px;
 	margin: 0 5px;
-	font-size: 14px;
+	font-size: 16px;
 	width: 80px;
 	background-color: #9fa5ac;
 	border: none;
